# designwatch

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
agents/: browser_agent.py  design_audit_agent.py
api/: main.py
api/routes/: level1.py  level2.py  level3.py
entities/: models.py
migrations/: env.py
migrations/versions/: 3c509f7d5d9c_create_scan_reports_table.py
repositories/: scan_repository.py
services/: email_service.py  report_service.py
shared/: config.py
ui/: app.py
ui/pages/: history.py  level1.py  level2.py  level3.py
