[project]
name = "designwatch"
version = "0.1.0"
description = "AI-powered UI/UX design audit agent for automated visual regression testing"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.107.0",
    "fastapi>=0.136.3",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
